# task_api

./: .env  README.md  pyproject.toml  requirements.txt
config/: api_exceptions.py  settings.py  urls.py
docs/: postman_collection.json  postman_environment.json
task/: filters.py  models.py  serializers.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_add_task_timestamps_trigger.py
task/tests/: test_tasks_api.py
